--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 workflows:
-  test-env-vars:
+  test-env-my-var:
     jobs:
       - build
 
@@ -15,3 +15,4 @@ jobs:
           name: "echo an env var that is part of our project"
           command: |
             echo $MY_ENV_VAR
+            echo $MY_Var
