--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,10 @@ workflows:
 jobs:
   build:
     docker:
-      - image: cimg/base:2020.01
+      - image:: cimg/base:2020.01
     steps:
       - checkout
       - run:
           name: "echo an env var that is part of our project"
           command: |
             echo $MY_ENV_VAR
-            echo $MY_Var
